dockerfile/envoy/files/etc/envoy/envoy.yml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
  - name: satymathbot
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: satymathbot
            virtual_hosts:
            - name: satymathbot
              domains: ['*']
              routes:
              - match: { prefix: '/' }
                route: { cluster: satymathbot }
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: satymathbot
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: satymathbot
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nginx
                port_value: 80
